--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <main>
         <div>
             <section><!--Put some classes or id's in here-->
-
+                <h1> Coding Quiz Challenge</h1>
+                <h4>Try to answer as fast as possible. The faster your time, the higher your score. However, a wrong answer will penalize you 15 seconds/points.</h4>
+                <button>Take Quiz</button>
             </section>
         </div>
     </main>
