--- a/index.html
+++ b/index.html
@@ -1,27 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Insert Title</title>
+    <title>Coding Quiz Game</title>
     <link rel="stylesheet" type="text/css" href="./assets/css/reset.css"/>
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css"/>
 </head>
 
 <body>
     <header>
-        <nav> <!--what do you want to link?-->
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-        </nav>
+        <a href="/highscores.html"><h3>View High Scores</h3></a>
     </header>
     <main>
         <div>
-            <section><!--Put some classes or id's in here-->
+            <section id="welcome"><!--Put some classes or id's in here-->
                 <h1> Coding Quiz Challenge</h1>
                 <h4>Try to answer as fast as possible. The faster your time, the higher your score. However, a wrong answer will penalize you 15 seconds/points.</h4>
-                <button>Take Quiz</button>
+                <button id="startButton">Take Quiz</button>
             </section>
         </div>
     </main>
