Added Quiz, timer, and gameplay elements

--- a/highscores.html
+++ b/highscores.html
@@ -8,13 +8,15 @@
 
 <body>
     <header>
-        <h3><a href="/index.html">Quiz Home</a></h3>
+        <h3><a href="./index.html">Quiz Home</a></h3>
     </header>
     <main>
-        <div>
-            <section><!--Put some classes or id's in here-->
-                <h1> This is where high scores will be displayed.</h1>              
-            </section>
+        <div><!--Put some classes or id's in here-->
+            <h1> YOU WIN!</h1>              
+        </div>
+
+        <div id = "highscore">
+            <h2> This will be the form?</h2>
         </div>
     </main>
 <script src="./assets/script.js"></script>
