Added localstorage functionality to save score, added form

--- a/highscores.html
+++ b/highscores.html
@@ -11,15 +11,23 @@
         <h3><a href="./index.html">Quiz Home</a></h3>
     </header>
     <main>
-        <div><!--Put some classes or id's in here-->
-            <h1> YOU WIN!</h1>              
+        <div>
+            <h1> YOU WIN!</h1>
+
         </div>
 
+        <div id = "form">
+            <form action="/action_page.php">
+                <label for="init">Enter Initials:</label><br>
+                <input type="text" id="init" name="init" value=""><br>
+                <input type="submit" value="Submit">
+              </form> 
+        </div>
         <div id = "highscore">
-            <h2> This will be the form?</h2>
+
         </div>
     </main>
-<script src="./assets/script.js"></script>
+<script src="./assets/scorescript.js"></script>
 </body>
 
 </html>
