--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <p id="timer">Timer</p>
     </header>
     <main>
-        <div id="welcome"><!--Put some classes or id's in here-->
+        <div id="welcome">
                 <h1> Coding Quiz Challenge</h1>
                 <h4>Try to answer as fast as possible. The faster your time, the higher your score. However, a wrong answer will penalize you 15 seconds.</h4>
                 <button id="startButton">Take Quiz</button>
