--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h2>What does it mean to append an element?</h2>
             <ol>
                 <li><button class = "false">To remove an element from the DOM</button></li>
-                <li><button id = "true5">To add the element to the DOM</button></li>
+                <li><button id = "true5">To add an element to the DOM</button></li>
                 <li><button class = "false">To change an element's class in the DOM</button></li>
                 <li><button class = "false">To restart your browser</button></li>
             </ol>
