--- a/highscores.html
+++ b/highscores.html
@@ -13,18 +13,25 @@
     <main>
         <div>
             <h1> YOU WIN!</h1>
-
+            <h2 id = "score">Your score is:</h2>
         </div>
 
-        <div id = "form">
-            <form action="/action_page.php">
-                <label for="init">Enter Initials:</label><br>
-                <input type="text" id="init" name="init" value=""><br>
-                <input type="submit" value="Submit">
-              </form> 
-        </div>
-        <div id = "highscore">
-
+        <div class="clearfix">
+            <div class="card">
+              <h2>Enter Initials</h2>
+              <form method="POST">
+                <div class="input-group">
+                  <label for="initials">Initials:</label>
+                  <input type="text" name="initials" id="initials" placeholder="" />
+                </div>
+                <button id="submit">Submit</button>
+              </form>
+            </div>
+            <div class="card">
+              <h2>Save Your Score</h2>
+              <p><strong>Initials:</strong> <span id="user-initials"></span></p>
+              <p><strong>Score:</strong> <span id="user-score"></span></p>
+            </div>
         </div>
     </main>
 <script src="./assets/scorescript.js"></script>
