--- a/highscores.html
+++ b/highscores.html
@@ -12,14 +12,13 @@
     </header>
     <main>
         <div>
-            <h1> YOU WIN!</h1>
-            <h2 id = "score">Your score is:</h2>
+            <h1> YOU WON!</h1>
+            <h2 id = "score"></h2>
         </div>
 
         <div class="clearfix">
             <div class="card">
-              <h2>Enter Initials</h2>
-              <form method="POST">
+              <form method="POST" id="initialForm">
                 <div class="input-group">
                   <label for="initials">Initials:</label>
                   <input type="text" name="initials" id="initials" placeholder="" />
@@ -28,11 +27,14 @@
               </form>
             </div>
             <div class="card">
-              <h2>Save Your Score</h2>
+              <h2>Your Score</h2>
               <p><strong>Initials:</strong> <span id="user-initials"></span></p>
               <p><strong>Score:</strong> <span id="user-score"></span></p>
             </div>
         </div>
+
+        <h2>HIGH SCORES</h2>
+        <ul id = "highScores"></ol>
     </main>
 <script src="./assets/scorescript.js"></script>
 </body>
