--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <header>
-        <a href="./highscores.html"><h3>View High Scores</h3></a>
+        <a href="./highscores.html"><h3>See Your Last Score</h3></a>
         <p id="timer">Timer</p>
     </header>
     <main>
